--- a/css/style.css
+++ b/css/style.css
@@ -9,38 +9,22 @@ body {
   width: 100%;
   height: 100vh; }
 
-.panel-one {
-  width: 600px;
-  height: 100vh;
-  background: #DA7B93;
-  -webkit-animation: mymove 0.5s ease-in-out forwards;
-  /* Safari 4.0 - 8.0 */
-  animation: mymove 0.5s ease-in-out forwards;
-  position: absolute; }
-
 .wrapper {
   position: absolute;
   z-index: 1000;
   top: 0px;
   left: 0px; }
 
-.panel-two {
-  width: 570px;
-  height: 100vh;
-  background: #1C3334;
-  -webkit-animation: mymove 0.5s ease-in-out forwards;
-  /* Safari 4.0 - 8.0 */
-  animation: mymove 0.5s ease-in-out forwards;
-  position: absolute; }
-
 .panel-three {
+  /*overflow: scroll;*/
   width: 540px;
   height: 100vh;
   background: #376E6F;
-  -webkit-animation: mymove 0.5s ease-in-out  forwards;
+  /*-webkit-animation: mymove 0.5s ease-in-out  forwards;*/
   /* Safari 4.0 - 8.0 */
-  animation: mymove 0.5s ease-in-out forwards;
-  position: absolute; }
+  /*animation: mymove 0.5s ease-in-out forwards;*/
+  position: absolute; 
+}
 
 @keyframes mymove {
   0% {
@@ -78,44 +62,48 @@ header {
 h1 {
   z-index: 10000;
   color: #DA7B93;
-  font-size: 80px;
+  font-size: 4em;
   letter-spacing: 28px;
-  padding-left: 20px;
+  /*padding-left: 20px;*/
   margin: 0 auto;
   margin-top: 20px;
   text-align: center;
-  border: 2px solid #2E151B;
+  /*border: 2px solid #2E151B;*/
   font-family: 'Pathway Gothic One', sans-serif; }
 
 h2 {
-  font-size: 18px;
-  color: #DA7B93;
+  font-size: 9px;
+  color: white;
   font-family: 'Oxygen', sans-serif;
-  letter-spacing: 30px;
+  letter-spacing: 5px;
   margin: 0 auto;
   padding-top: 10px;
   padding-bottom: 5px; }
 
 form {
-  margin-top: 180px;
-  text-align: left; }
+  /*margin-top: 180px;*/
+  text-align: left; 
+}
 
 fieldset {
   border: none;
-  background-color: #2E151B;
+  /*background-color: #2E151B;*/
   margin-left: 93px;
-  margin-right: 95px; }
+  margin-right: 95px;
+  padding-left: 0px;
+ }
 
 #people-days {
-  margin-top: 5px;
+/*  margin-top: 5px;
   margin-right: 200px;
-  padding-right: 0px; }
+  padding-right: 0px;*/
+   }
 
 input {
   color: white;
   font-size: 24px;
   background-color: #376E6F;
-  border: none;
+  border: 2px solid black;
   padding: 4px; }
 
 input:focus {
@@ -123,12 +111,13 @@ input:focus {
   border: 1px solid red;
   box-shadow: 0 0 10px #DA7B93; }
 
-.set-width {
-  width: 321px; }
+/*.set-width {
+  width: 321px; }*/
 
 .set-width-people {
   width: 40px;
-  padding-left: 10px;
+  text-align: center;
+  /*padding-left: 10px;*/
   -webkit-box-sizing: border-box;
   /* Safari/Chrome, other WebKit */
   -moz-box-sizing: border-box;
@@ -136,9 +125,10 @@ input:focus {
   box-sizing: border-box;
   /* Opera/IE 8+ */ }
 
-#input-space-to {
+/*#input-space-to {
   margin-bottom: 5px;
-  width: 321px; }
+  width: 321px; 
+}*/
 
 h3 {
   color: #DA7B93;
@@ -147,7 +137,7 @@ h3 {
 .button-primary {
   float: left;
   background-color: #376E6F;
-  border: none;
+  border: 2px solid black;
   padding: 7px 14px;
   text-align: center;
   text-decoration: none;
@@ -155,21 +145,21 @@ h3 {
   border-radius: 0px;
   margin-right: 30px; }
 
-#submit-arrow {
+#submitArrow {
   color: #DA7B93;
   font-size: 60px;
   position: absolute;
-  width: 92px;
-  height: 161px;
-  top: 352px;
+  right: 143px;
+  top: 274px;
+  width: 105px;
+  height: 105px;
   text-align: center;
-  border-radius: 0px;
-  right: 94px;
-  margin: 0 auto;
-  background-color: #2E151B; }
+  }
 
 #car-group {
   margin-top: 5px;
+  /*margin-left: 0px;*/
+  margin-right: 0px;
   background-color: #376E6F;
   padding: 0px; }
 
@@ -188,18 +178,19 @@ h3 {
   transition: background-color 0.8s ease-in-out; }
 
 #calculations {
-  margin-top: 3px;
+/*  margin-top: 3px;
   height: 100px;
-  background-color: #DA7B93;
+  background-color: #DA7B93;*/
   margin-left: 93px;
-  margin-right: 95px; }
+  margin-right: 135px; }
 
 #final-cost {
-  text-align: center;
+/*  text-align: center;
   padding-top: 5px;
   margin-left: 25px;
   font-weight: bold;
-  color: #1C3334; }
+  color: #1C3334; */
+}
 
 #fuel-cost {
   color: #DA7B93;
@@ -210,18 +201,25 @@ h3 {
   letter-spacing: 20px; }
 
 #over-cost {
-  color: #DA7B93;
+  color: white;
   background-color: #1C3334;
   padding-top: 5px;
-  padding-left: 20px;
-  letter-spacing: 20px; }
+  /*padding-left: 20px;*/
+  letter-spacing: 5px; }
 
 button:focus {
   outline: none;
   border: 1px solid #DA7B93;
   box-shadow: 0 0 10px #DA7B93; }
 
-#motorbike {
+
+.car {
+  width: 154px;
+  height: 110px;
+  padding: 15px;
+}
+
+/*#motorbike {
   padding: 15px;
   width: 174px;
   height: 130px; }
@@ -239,7 +237,7 @@ button:focus {
 #motorhome {
   padding: 15px;
   width: 174px;
-  height: 130px; }
+  height: 130px; }*/
 
 img {
   max-width: 100%;
@@ -407,12 +405,11 @@ p {
   padding: 10px;
   padding-left: 25px; }
 
-@media only screen and (max-width: 1168px) {
-  .panel-three {
-    width: 395px; }
+#distanceKm {
+  padding-top: 5px;
+}
 
-  .panel-two {
-    width: 405px; }
+@media only screen and (max-width: 1168px) {
 
   .panel-one {
     width: 415px; }
@@ -420,15 +417,15 @@ p {
   header {
     margin-left: 14px; }
 
-  fieldset {
+  fieldset, #car-group {
     margin-left: 20px;
     margin-right: 160px; }
 
   #people-days {
     margin-right: 260px; }
 
-  #submit-arrow {
-    right: 22px; }
+  #submitArrow {
+    right: 175px; }
 
   #smartCar {
     margin-left: 1px; }
@@ -438,10 +435,10 @@ p {
 
   #calculations {
     margin-left: 20px;
-    margin-right: 22px; }
+    margin-right: 135px; }
 
   #car-group {
-    margin-right: 0px; }
+    margin-right: 260px; }
 
   .modal {
     margin-left: 438px; }
@@ -458,7 +455,7 @@ p {
   form {
     margin-top: 100px; }
 
-  #submit-arrow {
+  #submitArrow {
     top: 254px;
     height: 150px;
     width: 97px; }
@@ -484,7 +481,7 @@ p {
   header {
     margin-left: 14px; } }
 @-moz-document url-prefix() {
-  #submit-arrow {
+  #submitArrow {
     top: 362px;
     height: 172px; }
 
